--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@chakra-ui/react": "^2.3.6",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@fontsource/montserrat": "^4.5.13",
+    "@fontsource/open-sans": "^4.5.13",
+    "@fontsource/raleway": "^4.5.11",
     "framer-motion": "^6.5.1",
     "lightweight-charts": "^3.8.0",
     "next": "12.3.1",
