--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-number-format": "^5.1.1",
-    "s3": "^4.4.0"
+    "s3": "^4.4.0",
+    "swiper": "^8.4.4"
   },
   "devDependencies": {
     "@types/node": "18.11.4",
