--- a/package.json
+++ b/package.json
@@ -16,23 +16,28 @@
     "@fontsource/open-sans": "^4.5.13",
     "@fontsource/raleway": "^4.5.11",
     "aws-sdk": "^2.1251.0",
+    "chart.js": "^4.0.1",
     "dotenv": "^16.0.3",
     "firebase": "^9.14.0",
     "framer-motion": "^6.5.1",
     "fs": "^0.0.1-security",
     "lightweight-charts": "^3.8.0",
     "next": "12.3.1",
+    "randomcolor": "^0.6.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.39.7",
     "react-icons": "^4.6.0",
     "react-number-format": "^5.1.1",
+    "recharts": "^2.2.0",
     "s3": "^4.4.0",
     "swiper": "^8.4.4"
   },
   "devDependencies": {
     "@types/node": "18.11.4",
+    "@types/randomcolor": "^0.5.7",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.26.0",
