--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.39.7",
     "react-icons": "^4.6.0",
     "react-number-format": "^5.1.1",
+    "react-spinners": "^0.13.8",
     "recharts": "^2.2.0",
     "s3": "^4.4.0",
     "swiper": "^8.4.4"
